fixed filter color contrast

--- a/components/filters/filters.module.css
+++ b/components/filters/filters.module.css
@@ -17,6 +17,7 @@
     border-radius: 16px;
     background: #f0f0f0;
     background-color: #dadada;
+    background-color: #bebebe;
     box-shadow:  8px 8px 8px #d8d8d8,
                 -8px -8px 8px #ffffff;
 }
